wp-content/themes/arizona-envelope/assets/styles/components/_single-product.scss
//Provisional solution for first push. Need to figure this out, where are duplicates coming from? Remove them and remove these lines
.tm-extra-product-options-fields{
	#tm-epo-field-0, #tm-epo-field-2, #tm-epo-field-3, .tm-collapse{
		display: none;
	}
}
.yahm-price-display{
	#yahm-unit-price{
		color: $brand-orange;
		font-size: rem(42);
	}
	#yahm-unit-label{
		color: $brand-orange;
	}
}
.woocommerce{
	div.product{
		div.summary, div.images{
			width: 100%;
			float: none;
		}
		div.images{

		}
		div.summary{

		}
		form.cart, p.cart{
			margin-bottom: 0;
			.button{
				font-family: $copy-font;
				padding: 14px 0;
				font-weight: medium;
				text-transform: uppercase;
				border-radius: 0;
				border: 2px solid;
				@include transition(0.2s all ease-in-out);
				background-color: $brand-orange;
				width: rem(200);
				height: rem(50);
				color: #fff;
				border-color: $brand-orange;
				&:hover{
					background-color: $dark-gray;
					border-color: $dark-gray;
					color: #fff;
				}
			}
			#yahm-quantity{
				width: 100%;
			}
		}
		h1{
			font: 400 rem(50) $copy-font;
			color: $brand-orange;
		}
		h2{
			color: $dark-gray;
		}
		span.price{
			color: $brand-orange;
			font-size: rem(28);
		}
		.product-block{
			@include clearfix;
			border: 4px solid $light-gray;
			> div{
				&:first-child{
					border-right: 1px solid $light-gray;
					margin: rem(40) 0;
					h4{
						color: $brand-orange;
						text-transform: uppercase;
					}
				}
				&:last-child{
					> div{
						margin: rem(60) rem(60) 0 rem(40);
						position: relative;
						height: 100%;
						width: calc(100% - 100px);
					}
					h1{
						display: none;
					}
					.tm-epo-style-wrapper, .tm-epo-style.square{
						height: 1em;
						width: 1em;
						border-color: $dark-gray;
						vertical-align: middle;
					}
					.tm-extra-product-options{
						.tm-cell{
							margin-bottom: rem(8);
						}
						ul.tmcp-ul-wrap.tm-extra-product-options-checkbox li.tmcp-field-wrap .tm-label{
							color: $dark-gray;
							vertical-align: middle;
							padding-left: rem(16);
						}
					}
					form.cart{
						h5{
							text-transform: uppercase;
							color: $brand-orange;
							font-weight: 700;
						}
						.single_add_to_cart_button{
							position: absolute;
							bottom: rem(20);
							right: 0;
						}
					}
						
				}
			}
		}
	}
	//move this lines to a new file during cleanups
	form.checkout_coupon, form.login, form.register, table.shop_table{
		border: none!important;
		padding-left: 0!important;
	}
	.col2-set{
		.col-1{
			width: 38%!important;	
		}
		.col-2{

		}	
	}
	table{
		&.cart{
			.cart_item{
				.product-removal{
					width: 40px;
					a{
						color: $brand-orange;
						font-size: rem(24);
						@include transition(0.2s color ease-in-out);
						&:hover{
							color: $dark-gray;
						}
					}
				}
				.product-thumbnail{
					max-width: rem(100);
					a{
						display: block;
						img{
							width: 100%;
						}
					}
				}
				.product-name{
					text-align: center;
					.tm-cart-edit-options{
						display: none;
					}
				}
				.product-edit{
				    color: transparent;
    				position: relative;
					a{
						position: absolute;
					    top: 44%;
					    left: 50px;
					    transform: translateX(-50%);
					    font-size: 16px;
					    font-weight: 400;
						color: $brand-orange;
						@include transition(0.2s color ease-in-out);
						&:hover{
							color: $dark-gray;
						}
					}
				}
				span{
					color: $dark-gray;
				}
			}
		}
		&.woocommerce-checkout-review-order-table{
			.order-total, .order-total span{
				color: $brand-orange;
			}
		}
	}
	.woocommerce-checkout{
		#payment{
			background: transparent;
			div.payment_box{
				background-color: transparent;
			}
			.wc-terms-and-conditions{
				label.checkbox{
					font-size: rem(16);
				}
			}
		}
	}
}
dl{
	margin-bottom: 0;
}
//move this lines to a new file during cleanups
.woocommerce-message{
	border-color: $brand-orange;
	&:before{
		color: $brand-orange;
	}
	a.wc-forward{
		display: none;
	}
}
.woocommerce-checkout{
	.woocommerce-info{
		display: none;
	}
}

.woocommerce-account .addresses .title .edit{
	padding-top: rem(20);
	color: $brand-orange;
	&:hover{
		color: $dark-gray;
	}
}

.woocommerce-account .woocommerce-MyAccount-content{
	text-align: left!important;
	width: 100%!important;
	.woocommerce-info{
		border-color: $brand-orange;
		&:before{
			color: $brand-orange;
		}
		.woocommerce-Button{
			display: none;
		}	
	} 
}

#add_payment_method #payment div.payment_box, .woocommerce-cart #payment div.payment_box, .woocommerce-checkout #payment div.payment_box{
	//display: none!important;
	&:before{
		display: none!important;
	}
}


.woocommerce-view-order{
	.woocommerce{
		.woocommerce-MyAccount-content{
			p:first-child{
				font: 400 1.4375rem Roboto,sans-serif;
			}
		}
	}
}
mark{
	background-color: $sand;
}

.woocommerce-error{
	border-color: $brand-orange;
	&:before{
		color: $brand-orange;
	}
}

